# AI_Engineering_Course

./: .gitignore  README.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW03/eda-cli/reports/report1/: missing.csv  report.md
homeworks/HW03/eda-cli/reports/report2/: missing.csv  report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py  core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py
homeworks/HW04/eda-cli/tests/: test_core.py
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  metrics_summary.json
homeworks/HW07/artifacts/labels/: labels_hw07_ds2.csv  labels_hw07_ds3.csv
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
project/: .env.example  README.md  README_RUS.md  pyproject.toml  report.md  report_rus.md
project/artifacts/: README.md
project/configs/: README.md  config.py
project/data/: README.md  README_RUS.md
project/notebooks/: 01_data_exploration.ipynb  02_model_exploration.ipynb  03_dataset_preparation.ipynb  README.md  README_RUS.md
project/src/api/: __init__.py  images.py
project/src/dataset/: download.py
project/src/service/: __init__.py  images.py  main.py
project/src/service/templates/: form.html  result_image.html
project/tests/: README.md  README_RUS.md  test_api_service.py
