[project]
name = "UpscaleCompare"
version = "0.1.0"
description = "A comprehensive study of super-resolution upscaling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.2",
    "ipykernel>=7.2.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
