[project]
name = "UpscaleCompare"
version = "0.1.0"
description = "A comprehensive study of super-resolution upscaling"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.8.2",
    "fastapi[standard]>=0.135.1",
    "huggingface-hub>=1.7.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.22",
    "scikit-image>=0.26.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "configs"]

[project.scripts]
download-datasets = "src.dataset.download:main"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest-dependency>=0.6.1",
]